# mirage-math

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeKits.json  CMakeLists.txt  Taskfile.yaml  build.sh  compile_commands.json
include/: vec3.hpp
include/mirage_math/: constants.hpp  line.hpp  mat.hpp  mat3.hpp  mat4.hpp  plane.hpp  point.hpp  quaternion.hpp  transform.hpp  vec.hpp  vec3.hpp
src/: mirage-math.cpp  mirage-math.cppm
test/: CMakeLists.txt  line.test.cpp  mat3.test.cpp  mat4.test.cpp  plane.test.cpp  quaternion.test.cpp  test_utils.hpp  transform.test.cpp  vec3.test.cpp  vec4.test.cpp
